--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-2260031-8', 'auto');
+        ga('create', '', 'auto');
         ga('send', 'pageview');
 
     </script>
