--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,7 +56,42 @@
     </div>
 
 </section>
-
+{% if site.duoshuo_share && site.duoshuo_username %}
+<!-- 多说 Share start -->
+</style>
+    <div class="ds-share"
+         style="text-align: right"
+         data-thread-key="{{page.id}}"blog.html  data-title="{{page.title}}"
+         data-url="{{site.url}}{{page.url}}"
+         data-images="{{ site.url }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}"
+         data-content="{{ content | strip_html | truncate:80 }} | {{ site.SEOTitle }} " >
+                    <div class="ds-share-inline">
+                      <ul  class="ds-share-icons-16">
+                        <li data-toggle="ds-share-icons-more"><a class="ds-more" href="#">分享到：</a></li>
+                        <li><a class="ds-wechat flat" href="javascript:void(0);" data-service="wechat">WeChat</a></li>
+                        <li> <a class="ds-linkedin" href="javascript:void(0);" data-service="linkedin">L</a> </li>
+                        <li> <a class="ds-facebook" href="javascript:void(0);" data-service="facebook">F</a> </li>
+                        <li> <a class="ds-twitter" href="javascript:void(0);" data-service="twitter">T</a> </li>
+                      </ul>
+                      <div class="ds-share-icons-more">
+                      </div>
+                    </div>
+                <hr>
+    </div>
+                <!-- 多说 Share end-->
+{% endif %}
+{% if page.comments and site.duoshuo_username %}
+<section id="disqus_thread" class="animated fadeInUp">
+  <div class="comment">
+      <div class="ds-thread"
+          data-thread-key="{{page.id}}"
+          data-title="{{page.title}}"
+          data-url="{{site.url}}{{site.baseurl}}{{page.url}}" >
+      </div>
+  </div>
+</section>
+               <!-- /#duoshuo_thread -->
+{% endif %}
 {% include rss_footer.html %}
 {% include footer.html %}
 {% include js.html %}
