--- a/_includes/header_front.html
+++ b/_includes/header_front.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="intro-text">
             <div class="intro-lead-in">欢迎来到</div>
-            <div class="intro-heading"><span class="lab-name">SCEE Lab</span></div>
+            <div class="intro-heading"><span class="lab-name">袁增伟教授课题组</span></div>
             <a href="#about" class="page-scroll btn btn-xl">了解我们</a>
         </div>
     </div>
