--- a/_includes/nav_front.html
+++ b/_includes/nav_front.html
@@ -22,7 +22,7 @@
                     <a href="#page-top"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#about">课题组介绍</a>
+                    <a class="page-scroll" href="#about">课题组动态</a>
                 </li>
                 <!--<li>
                     <a class="page-scroll" href="#research">Research</a>
@@ -30,25 +30,28 @@
 
                 <li class="dropdown">
                     <a class="dropdown-toggle keep-open" data-toggle="dropdown" data-hover="dropdown" href="#research">
-                        研究项目<i class="fa fa-angle-down"></i></a>
+                        项目与成果<i class="fa fa-angle-down"></i></a>
                     <ul class="dropdown-menu">
                         <li><a class="page-scroll" href="#research">在研项目</a></li>
+                        <li><a href="/meetings/">结题项目</a></li>
                         <li><a href="/publications/">科研成果</a></li>
                         <li><a href="/honor/">获奖荣誉</a></li>
-                        <li><a href="/meetings/">结题项目</a></li>
+                        
                     </ul>
                 </li>
-
-                <li>
-                    <a class="page-scroll" href="#teaching">研究方法</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#dev">研究平台</a>
+                <li class="dropdown">
+                    <a class="dropdown-toggle keep-open" data-toggle="dropdown" data-hover="dropdown" href="#teaching">
+                        方法与平台<i class="fa fa-angle-down"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a class="page-scroll" href="#teaching">研究方法</a></li>
+                        <li><a class="page-scroll" href="#dev">研究平台</a></li>
+                    </ul>
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle keep-open" data-toggle="dropdown" data-hover="dropdown" href="#team">
-                        团队<i class="fa fa-angle-down"></i></a>
+                        团队成员<i class="fa fa-angle-down"></i></a>
                     <ul class="dropdown-menu">
+                        <li><a href="/about/">团队介绍</a></li>
                         <li><a class="page-scroll" href="#team">目前成员</a></li>
                         <li><a href="/previous_members/">毕业成员</a></li>
                         <li><a href="/join/">加入团队</a></li>
