--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
 
 {% include nav_nofront.html %}
 <div class="home">
-<div class="bg-white post">
+<section class="bg-white post">
 
     <div class="entry">
 
@@ -66,7 +66,9 @@
                        <!-- /#duoshuo_thread -->
         {% endif %}
     </div>
+    <!--
     <button class="anchor"><i class="fa fa-anchor"></i></button>
+-->
     <div class="right">
         <div class="wrap">
 
@@ -86,7 +88,7 @@
         </div>
     </div>
 
-    </div>
+    </section>
     </div>
   
 {% if site.duoshuo_share && site.duoshuo_username %}
