--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -1,6 +1,7 @@
 li {
-    font-size: 18px;
+    font-size: 20px;
     line-height: 1.75;
+    font-weight: bolder;
 }
 
 .navbar-default .navbar-brand {
@@ -51,19 +52,71 @@ li {
         padding-bottom: 100px;
     }
 }
+@media screen and (max-width:1200px) and (min-width: 770px) {
+    .post {
+        width: 90%;
+    }
+}
+@media screen and (max-width: 770px){
+    .post {
+        width: 95%
+    }
+    .post .anchor {
+            display: block;
+            visibility: visible;
+            position: fixed;
+            top: 76px;
+            right: 2.5%;
+            padding: 5px 10px;
+            color: #333;
+            font-size: 15px;
+            background-color: #f8f8fd;
+            box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3), 0 0 30px rgba(10, 10, 0, 0.1) inset;
+            opacity: 0.7;
+            transition: 0.2s cubic-bezier(0.5, 0.1, 0.51, 1.38);
+        }
+    .post .anchor-hide {
+            opacity: 0;
+            visibility: hidden;
+        }
+    .post .right {
+            visibility: hidden;
 
+            // display: none;
+            position: fixed;
+
+            // z-index: 190;
+            float: none;
+            width: auto;
+            max-width: 95%;
+            padding: 0;
+            top: 76px;
+            right: 2.5%;
+            opacity: 0;
+            transform-origin: 100% 0;
+            transform: scale(0.1);
+            transition: 0.2s cubic-bezier(0.5, 0.1, 0.51, 1.38);
+        }
+    .post .right-show {
+            visibility: visible;
+            opacity: 1;
+            transform: scale(1);
+        }
+    
+}
 section.blog {
     padding-top: 50px;
     padding-bottom: 50px;
 }
-
+#markdown-toc {
+    display: none;
+}
 
 .post {
-    box-sizing: border-box;
-    margin-top: 175px;
-    margin-left: 25%;
-    width: 1170px;
-    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1170px;
+    display: flex;
 }
 .post .entry {
     width: 75%;
