--- a/_includes/team.html
+++ b/_includes/team.html
@@ -3,7 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">出色的团队</h2>
+                    <h2 class="section-heading">团队成员
+                    </h2>
                     <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
